--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,35 +1,104 @@
-*  {
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-}
-
-
-.game-board {
+ }
+ 
+ 
+ .game-board {
     width: 80%;
     height: 400px;
     border: 1px solid #333;
     margin: 0 auto;
     position: relative;
     overflow: hidden;
+ }
+ .pipe {
+   position: absolute;
+   bottom: 0;
+   width: 80px;
+   animation: pipe-animation 2s infinite linear;
 }
 
-.pipe {
+ .pipe {
+    right: 0;
+ }
+ 
+
+ @keyframes pipe-animation {
+   from {
+       right: -80%;
+   }
+
+
+   to {
+       right: 100%;
+   }
+}
+
+.mario {
+    width: 180px;
     position: absolute;
     bottom: 0;
-    width: 80px;
-}
-
-.pipe {
-    position: absolute;
-}
-
-@keyframes pipe-animation {
-    from {
-        righ: -80;
+ }
+ 
+  @keyframes jump {
+    0% {
+        bottom: 0;
     }
+ 
+ 
+    40% {
+        bottom: 180px;
+    }
+ 
+ 
+    50% {
+        bottom: 180px;
+    }
+ 
+ 
+    60% {
+        bottom: 180px;
+    }
+ 
+ 
+    100% {
+        bottom: 0;
+    }
+     
+ }
+ .jump {
+    animation: jump 500ms ease-out;
+ }
+ .game-board {
+    width: 100%;
+    height: 400px;
+    border-bottom: 10px solid #11b339;
+    margin: 0 auto;
+    position: relative;
+    overflow: hidden;
+    background: linear-gradient(#87CEEB, #E0F6FF);
+ }
 
+ .clouds {
+    position: absolute;
+    width: 250px;
+    animation: cloud-animation 10s infinite linear;
+ }
+ 
+@keyframes cloud-animation {
+    from {
+        right: -250px;
+    }
+ 
+ 
     to {
         right: 100%;
     }
-}
+ }
+ 
+ 
+ 
+ 
+ 
